# ilmiya

./: .gitignore  Cargo.toml  README.md  run_local_db.sh  sql-compose.yaml
migrations/: 0001_initial.up.sql  20250701022838_init_schema.sql  20250701113116_rename_details_id_to_exam_description_id.sql
src/: README.md  conn.rs  db.rs  errors.rs  main.rs  models.rs
src/database/: schema.rs
src/database/queries/: delete.rs  insert.rs  mod.rs  read.rs
src/endpoints/: create.rs  fetch.rs  mod.rs
src/entities/: correct_option.rs  details.rs  exam.rs  mod.rs  options.rs  prelude.rs  questions.rs  sections.rs
src/handlers/: llm_response_handler.rs  mod.rs
src/model/: delete.rs  exam.rs  llm.rs  mod.rs  option.rs  question.rs  quran.rs  request.rs  response.rs  section.rs  state.rs
src/routes/: create.rs  delete.rs  edit.rs  exam.rs  fetch.rs  gen_options.rs  mcq.rs  mcq_options.rs  mod.rs  quran.rs
src/services/: llm.rs  mod.rs  quran_api.rs
src/utils/: env.rs  formatter.rs  mod.rs  parse.rs  prompts.rs
