[package]
name = "ilmiya"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
redis = { version = "0.29.2", features = ["tokio-comp"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
dotenv = "0.15"
rand = "0.8"
futures-util = { version = "0.3.31", default-features = false }
chrono = "0.4"
actix-rt = "2.10.0"
chrono-tz = "0.10.1"
actix-governor = "0.8.0"
deadpool-redis = "0.20.0"

[[bin]]
name = "ilmiya"
path = "src/main.rs"
