[package]
name = "ilmiya"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
dotenv = "0.15"
rand = "0.8"
futures-util = { version = "0.3.31", default-features = false }
chrono = "0.4"
actix-rt = "2.10.0"
chrono-tz = "0.10.1"
actix-governor = "0.8.0"
postgres-openssl = "0.5.1"
postgres = "0.19.10"
openssl = "0.10.71"
anyhow = "1.0.98"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.11.1"
once_cell = "1.19"

[[bin]]
name = "ilmiya"
path = "src/main.rs"
